removed anchor tag for now, cuz of z-index issue

--- a/css/nav.css
+++ b/css/nav.css
@@ -17,7 +17,7 @@
    top: 0px;
    left: 20px;
    width: 15%;
-   z-index: 1;
+   z-index: 2;
    -webkit-user-select: none;
    user-select: none;
  }
@@ -45,7 +45,7 @@
    left: -5px; 
    cursor: pointer; 
    opacity: 0; /* hide this */
-   z-index: 2; /* and place it over the hamburger */
+   z-index: 3; /* and place it over the hamburger */
    -webkit-touch-callout: none;
  }
  
